<resources>
    <string name="app_name">木头人视频</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">未登录</string>
    <string name="nav_header_subtitle">ak.video@animekid.cn</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_search">Search</string>
    
    <string name="action_menus1">主页</string>
    <string name="action_menus2">电影</string>
    <string name="action_menus3">电视剧</string>
    <string name="action_menus4">动漫</string>
    <string name="action_menus5">综艺</string>
    <string name="home_movie">最新电影</string>
    <string name="home_tv">最新电视剧</string>
    <string name="home_anime">最新动漫</string>
    <string name="home_shows">最新综艺</string>
    <string name="home_ref">别拉了，我也是有底线的～</string>
    <string name="source_player1">播放源1</string>
    <string name="source_player2">播放源2</string>
    <string name="source_player3">播放源3</string>
    <string name="player_list">播放列表</string>
    <string name="player_desc">简介</string>
    <string name="player_hit">%1$d次播放</string>
    <string name="actors">主演：%1$s</string>
    <string name="directors">导演：%1$s</string>

    <string name="warning">
        本APP所有资源均收集于网络,如果侵犯了您的权益,请联系站长 Email:912530326@qq.com。
        All resources on this website are collected on the Internet. If infringe your rights, please contact the webmaster. Email:912530326@qq.com。
    </string>
    <string name="format_string">%1$s</string>
    <string name="nav_name_license">LICENSE</string>
    <string name="nav_name_search_result">查询结果</string>
    <string name="nav_name_player">视频详情</string>
    <string name="nav_name_home">首页</string>
    <string name="nav_name_about">关于我们</string>
    <string name="nav_name_settings">设置</string>
    <string name="nav_name_login">登录</string>
    <string name="nav_name_register">注册</string>
    <string name="nav_name_profile">个人资料</string>
    <string name="about_help">帮助中心&#038;问题反馈</string>
    <string name="about_check_update">检查更新</string>
    <string name="about_version">当前版本</string>
    <string name="about_license">《 Apache License 》</string>
    <string name="feedback_content_label">问题反馈</string>
    <string name="feedback_content">可以在此或访问https://github.com/luxutao/animes-wallpaper提交issue</string>
    <string name="feedback_email">Email</string>
    <string name="feedback_email_label">邮箱</string>
    <string name="feedback_submit">一键反馈</string>
    <string name="navbar_random">随机推荐</string>
    <string name="str_username">USERNAME</string>
    <string name="str_email">EMAIL</string>
    <string name="str_captcha">CAPTCHA</string>
    <string name="str_password">PASSWORD</string>
    <string name="str_go_login">去登录</string>
    <string name="str_forget_password">忘记密码</string>
    <string name="str_no_account">没有账号?</string>
    <string name="str_has_account">已有账号?</string>
    <string name="str_forget_password_t">忘记密码?</string>
    <string name="str_miss">想起来了?</string>
    <string name="str_reset_password">重置密码</string>
    <string name="my_collect">我的收藏</string>
    <string name="collect_list">收藏列表</string>
</resources>
