<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/itemHome"
        android:icon="@drawable/ic_menu_home"
        android:title="@string/action_menus1" />

    <item
        android:id="@+id/itemMovie"
        android:icon="@drawable/ic_menu_movie"
        android:title="@string/action_menus2" />

    <item
        android:id="@+id/itemTv"
        android:icon="@drawable/ic_menu_tv"
        android:title="@string/action_menus3" />

    <item
        android:id="@+id/itemAnime"
        android:icon="@drawable/ic_menu_anime"
        android:title="@string/action_menus4" />

    <item
        android:id="@+id/itemShows"
        android:icon="@drawable/ic_menu_shows"
        android:title="@string/action_menus5" />
</menu>