<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/nav_toolbar"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="250dp">

                    <cn.jzvd.JzvdStd
                        android:id="@+id/video_view"
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:background="#000000"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="10dp">

                    <TextView
                        android:id="@+id/v_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginVertical="5dp"
                    android:layout_marginStart="5dp">

                    <RatingBar
                        android:id="@+id/v_score_star"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="?android:ratingBarStyleSmall"
                        android:layout_marginEnd="5dp"
                        android:isIndicator="true"
                        android:numStars="5"
                        android:rating="0"
                        android:stepSize="0.5"/>

                    <TextView
                        android:id="@+id/v_score"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="5dp">

                    <TextView
                        android:id="@+id/v_year"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"/>

                    <TextView
                        android:id="@+id/v_lang"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"/>

                    <TextView
                        android:id="@+id/v_area"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"/>

                    <TextView
                        android:id="@+id/v_tname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>


                    <TextView
                        android:id="@+id/v_hit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginEnd="5dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="20dp">

                    <HorizontalScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:id="@+id/horizontalScrollViewItemContainer"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="horizontal"/>

                    </HorizontalScrollView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorLucency"
                    android:layout_margin="10dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginBottom="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:text="@string/player_desc"
                        android:textStyle="bold"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp">

                    <TextView
                        android:id="@+id/v_desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="5" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorLucency"
                    android:layout_margin="10dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginBottom="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:text="@string/player_list"
                        android:textStyle="bold"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/player1_player_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:text="@string/source_player1"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <ImageButton
                        android:id="@+id/player1_image_button"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:gravity="right"
                        android:background="@drawable/ic_down"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="10dp"
                    android:paddingBottom="10dp">

                    <cn.animekid.videokid.utils.AutoHeightGridView
                        android:id="@+id/player1_palyer_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:numColumns="auto_fit"
                        android:stretchMode="columnWidth"
                        android:listSelector="@color/colorWrite"
                        android:columnWidth="100dp">

                    </cn.animekid.videokid.utils.AutoHeightGridView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginHorizontal="10dp"
                    android:background="@color/colorLucency"/>

                <LinearLayout
                    android:id="@+id/player2_player_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:text="@string/source_player2"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <ImageButton
                        android:id="@+id/player2_image_button"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:gravity="right"
                        android:background="@drawable/ic_right"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginBottom="10dp">


                    <cn.animekid.videokid.utils.AutoHeightGridView
                        android:id="@+id/player2_palyer_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:numColumns="auto_fit"
                        android:stretchMode="columnWidth"
                        android:visibility="gone"
                        android:columnWidth="100dp" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginHorizontal="10dp"
                    android:background="@color/colorLucency"/>

                <LinearLayout
                    android:id="@+id/player3_player_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:text="@string/source_player3"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <ImageButton
                        android:id="@+id/player3_image_button"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:gravity="right"
                        android:background="@drawable/ic_right"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginBottom="10dp">


                    <cn.animekid.videokid.utils.AutoHeightGridView
                        android:id="@+id/player3_palyer_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:numColumns="auto_fit"
                        android:stretchMode="columnWidth"
                        android:visibility="gone"
                        android:columnWidth="100dp" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>